--- a/RepData_PA2.html
+++ b/RepData_PA2.html
@@ -80,8 +80,8 @@ Across the US, which types of events have the greatest economic consequences?
 }
 
 
-csvSample &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, nrows = 100)
-csvSampleClasses = sapply(csvSample, class)
+csvSample &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, nrows = 1000)
+csc = sapply(csvSample, class)
 #csvSampleClasses[&quot;BGN_DATE&quot;] &lt;- &quot;Date&quot;
 # csvSampleClasses[&quot;BGN_TIME&quot;] &lt;- &quot;numeric&quot; #hopefully will fix issue with leading zeros
 ## automatic generation for small sample
@@ -100,12 +100,20 @@ csvSampleClasses = sapply(csvSample, class)
 ##     REFNUM 
 ##  &quot;numeric&quot;
 
+csc = c(&quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, 
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, 
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;)
+
+
 # one strategy is to disregard events before 2000 when the classification method changed.
 
-#raw_csv &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE ) #,
-                    #colClasses = csvSampleClasses)
+raw_csv &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, colClasses = csc,
+                    nrows = 1000)
 
-# classes &lt;- sapply(raw_csv, class)
+raw_csv</code></pre>
+<pre><code>## data frame with 0 columns and 0 rows</code></pre>
+<pre class="r"><code># classes &lt;- sapply(raw_csv, class)
 # classes
 
 ## automatically generated classes, not ideal for most. Use &quot;NULL&quot; to skip a column.
@@ -125,7 +133,8 @@ csvSampleClasses = sapply(csvSample, class)
 ##  &quot;numeric&quot;
 
 remove(csvSample)
-remove(csvSampleClasses)
+remove(csc)
+
 # 37 variables, 902297 observations, caching is very helpful here.</code></pre>
 
 
