--- a/RepData_PA2.html
+++ b/RepData_PA2.html
@@ -100,23 +100,33 @@ csc = sapply(csvSample, class)
 ##     REFNUM 
 ##  &quot;numeric&quot;
 
-csc = c(&quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, 
-        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, 
-        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+## http://stackoverflow.com/questions/13022299/specify-date-format-for-colclasses-argument-in-read-table-read-csv
+setClass('myDate')
+setAs(&quot;character&quot;,&quot;myDate&quot;, function(from) as.Date(from, format=&quot;%m/%d/%Y&quot;) )
+## tmp &lt;- c(&quot;1, 15/08/2008&quot;, &quot;2, 23/05/2010&quot;)
+## con &lt;- textConnection(tmp)
+## tmp2 &lt;- read.csv(con, colClasses=c('numeric','myDate'), header=FALSE)
+## str(tmp2)
+
+csc = c(&quot;NULL&quot;, &quot;myDate&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;numeric&quot;, &quot;factor&quot;,
+        &quot;factor&quot;, &quot;factor&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
         &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;)
 
 
 # one strategy is to disregard events before 2000 when the classification method changed.
 
 raw_csv &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, colClasses = csc,
-                    nrows = 1000)
+                    nrows = 10000)
 
-raw_csv</code></pre>
-<pre><code>## data frame with 0 columns and 0 rows</code></pre>
-<pre class="r"><code># classes &lt;- sapply(raw_csv, class)
-# classes
 
-## automatically generated classes, not ideal for most. Use &quot;NULL&quot; to skip a column.
+ classes &lt;- sapply(raw_csv, class)
+ classes</code></pre>
+<pre><code>##   BGN_DATE     COUNTY COUNTYNAME      STATE     EVTYPE 
+##     &quot;Date&quot;  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot;</code></pre>
+<pre class="r"><code>## automatically generated classes, not ideal for most. Use &quot;NULL&quot; to skip a column.
 ##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
 ##  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot;  &quot;numeric&quot;   &quot;factor&quot; 
 ##      STATE     EVTYPE  BGN_RANGE    BGN_AZI BGN_LOCATI   END_DATE 
