--- a/RepData_PA2.html
+++ b/RepData_PA2.html
@@ -71,81 +71,64 @@ img {
 Across the US, Which types of events (EVTYPE) were most harmful to population health?
 Across the US, which types of events have the greatest economic consequences?
 -->
+<!--
+## automatic generation for small sample
+##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
+##  "numeric"   "factor"  "integer"   "factor"  "numeric"   "factor" 
+##      STATE     EVTYPE  BGN_RANGE    BGN_AZI BGN_LOCATI   END_DATE 
+##   "factor"   "factor"  "numeric"  "logical"  "logical"  "logical" 
+##   END_TIME COUNTY_END COUNTYENDN  END_RANGE    END_AZI END_LOCATI 
+##  "logical"  "numeric"  "logical"  "numeric"  "logical"  "logical" 
+##     LENGTH      WIDTH          F        MAG FATALITIES   INJURIES 
+##  "numeric"  "numeric"  "integer"  "numeric"  "numeric"  "numeric" 
+##    PROPDMG PROPDMGEXP    CROPDMG CROPDMGEXP        WFO STATEOFFIC 
+##  "numeric"   "factor"  "numeric"  "logical"   "factor"  "logical" 
+##  ZONENAMES   LATITUDE  LONGITUDE LATITUDE_E LONGITUDE_    REMARKS 
+##  "logical"  "numeric"  "numeric"  "numeric"  "numeric"  "logical" 
+##     REFNUM 
+##  "numeric" 
+-->
+<!--
+## automatically generated classes, not ideal for most. Use "NULL" to skip a column.
+##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
+##  "numeric"   "factor"   "factor"   "factor"  "numeric"   "factor" 
+##      STATE     EVTYPE  BGN_RANGE    BGN_AZI BGN_LOCATI   END_DATE 
+##   "factor"   "factor"  "numeric"   "factor"   "factor"   "factor" 
+##   END_TIME COUNTY_END COUNTYENDN  END_RANGE    END_AZI END_LOCATI 
+##   "factor"  "numeric"  "logical"  "numeric"   "factor"   "factor" 
+##     LENGTH      WIDTH          F        MAG FATALITIES   INJURIES 
+##  "numeric"  "numeric"  "integer"  "numeric"  "numeric"  "numeric" 
+##    PROPDMG PROPDMGEXP    CROPDMG CROPDMGEXP        WFO STATEOFFIC 
+##  "numeric"   "factor"  "numeric"   "factor"   "factor"   "factor" 
+##  ZONENAMES   LATITUDE  LONGITUDE LATITUDE_E LONGITUDE_    REMARKS 
+##   "factor"  "numeric"  "numeric"  "numeric"  "numeric"   "factor" 
+##     REFNUM 
+##  "numeric"
+-->
 <pre class="r"><code>if(!file.exists(&quot;repdata_data_StormData.csv&quot;)) {
   if(!file.exists(&quot;repdata_data_StormData.csv.bz2&quot;)) {
     download.file(&quot;https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2&quot;, &quot;repdata_data_StormData.csv.bz2&quot;, quiet = TRUE)
   }
   # unzip(&quot;repdata_data_StormData.csv.bz2&quot;)
-  # error, but worked last assignment on a .zip...
+  # error on local .bz2, but worked last assignment on a .zip...
 }
-
-
-csvSample &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, nrows = 1000)
-csc = sapply(csvSample, class)
-#csvSampleClasses[&quot;BGN_DATE&quot;] &lt;- &quot;Date&quot;
-# csvSampleClasses[&quot;BGN_TIME&quot;] &lt;- &quot;numeric&quot; #hopefully will fix issue with leading zeros
-## automatic generation for small sample
-##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
-##  &quot;numeric&quot;   &quot;factor&quot;  &quot;integer&quot;   &quot;factor&quot;  &quot;numeric&quot;   &quot;factor&quot; 
-##      STATE     EVTYPE  BGN_RANGE    BGN_AZI BGN_LOCATI   END_DATE 
-##   &quot;factor&quot;   &quot;factor&quot;  &quot;numeric&quot;  &quot;logical&quot;  &quot;logical&quot;  &quot;logical&quot; 
-##   END_TIME COUNTY_END COUNTYENDN  END_RANGE    END_AZI END_LOCATI 
-##  &quot;logical&quot;  &quot;numeric&quot;  &quot;logical&quot;  &quot;numeric&quot;  &quot;logical&quot;  &quot;logical&quot; 
-##     LENGTH      WIDTH          F        MAG FATALITIES   INJURIES 
-##  &quot;numeric&quot;  &quot;numeric&quot;  &quot;integer&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot; 
-##    PROPDMG PROPDMGEXP    CROPDMG CROPDMGEXP        WFO STATEOFFIC 
-##  &quot;numeric&quot;   &quot;factor&quot;  &quot;numeric&quot;  &quot;logical&quot;   &quot;factor&quot;  &quot;logical&quot; 
-##  ZONENAMES   LATITUDE  LONGITUDE LATITUDE_E LONGITUDE_    REMARKS 
-##  &quot;logical&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;logical&quot; 
-##     REFNUM 
-##  &quot;numeric&quot;
 
 ## http://stackoverflow.com/questions/13022299/specify-date-format-for-colclasses-argument-in-read-table-read-csv
 setClass('myDate')
 setAs(&quot;character&quot;,&quot;myDate&quot;, function(from) as.Date(from, format=&quot;%m/%d/%Y&quot;) )
-## tmp &lt;- c(&quot;1, 15/08/2008&quot;, &quot;2, 23/05/2010&quot;)
-## con &lt;- textConnection(tmp)
-## tmp2 &lt;- read.csv(con, colClasses=c('numeric','myDate'), header=FALSE)
-## str(tmp2)
 
 csc = c(&quot;NULL&quot;, &quot;myDate&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;numeric&quot;, &quot;factor&quot;,
         &quot;factor&quot;, &quot;factor&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
         &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
-        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
-        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
+        &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;numeric&quot;, &quot;numeric&quot;,
+        &quot;numeric&quot;, &quot;factor&quot;, &quot;numeric&quot;, &quot;factor&quot;, &quot;NULL&quot;, &quot;NULL&quot;,
         &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;, &quot;NULL&quot;)
-
 
 # one strategy is to disregard events before 2000 when the classification method changed.
 
-raw_csv &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, colClasses = csc,
-                    nrows = 10000)
+raw_csv &lt;- read.csv(&quot;repdata_data_StormData.csv&quot;, header = TRUE, colClasses = csc) #, nrows = 10000)
 
-
- classes &lt;- sapply(raw_csv, class)
- classes</code></pre>
-<pre><code>##   BGN_DATE     COUNTY COUNTYNAME      STATE     EVTYPE 
-##     &quot;Date&quot;  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot;</code></pre>
-<pre class="r"><code>## automatically generated classes, not ideal for most. Use &quot;NULL&quot; to skip a column.
-##    STATE__   BGN_DATE   BGN_TIME  TIME_ZONE     COUNTY COUNTYNAME 
-##  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot;  &quot;numeric&quot;   &quot;factor&quot; 
-##      STATE     EVTYPE  BGN_RANGE    BGN_AZI BGN_LOCATI   END_DATE 
-##   &quot;factor&quot;   &quot;factor&quot;  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot; 
-##   END_TIME COUNTY_END COUNTYENDN  END_RANGE    END_AZI END_LOCATI 
-##   &quot;factor&quot;  &quot;numeric&quot;  &quot;logical&quot;  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot; 
-##     LENGTH      WIDTH          F        MAG FATALITIES   INJURIES 
-##  &quot;numeric&quot;  &quot;numeric&quot;  &quot;integer&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot; 
-##    PROPDMG PROPDMGEXP    CROPDMG CROPDMGEXP        WFO STATEOFFIC 
-##  &quot;numeric&quot;   &quot;factor&quot;  &quot;numeric&quot;   &quot;factor&quot;   &quot;factor&quot;   &quot;factor&quot; 
-##  ZONENAMES   LATITUDE  LONGITUDE LATITUDE_E LONGITUDE_    REMARKS 
-##   &quot;factor&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot;  &quot;numeric&quot;   &quot;factor&quot; 
-##     REFNUM 
-##  &quot;numeric&quot;
-
-remove(csvSample)
-remove(csc)
-
-# 37 variables, 902297 observations, caching is very helpful here.</code></pre>
+remove(csc)</code></pre>
 
 
 </div>
